--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,4 @@ src/shell_qt/Makefile
 *~
 .cproject
 .project
-src/chromium.config
-src/chromium.creator
-src/chromium.files
-src/chromium.includes
-
+*.class
